AMade updates to the front-end functionality and design of the platform, including implementing new features and adjustments for better user experience

--- a/gestionnaire_requete/code/requetesEtudiant.html
+++ b/gestionnaire_requete/code/requetesEtudiant.html
@@ -15,7 +15,7 @@
         <ul>
                 <li><a href="Accueil">Accueil</a></li>
                 <li><a href="Mes requetes">Mes requetes</a></li>
-                <li class="active"><a href="Nouvelles requetes">Nouvelles requetes</a></li>
+                <li class="active"><a href="form.html">Nouvelles requetes</a></li>
                 <li><a href="">Statistiques</a></li>
         </ul>
         
